--- a/Neural net using Keras.ipynb
+++ b/Neural net using Keras.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Background - Analyzing IMDB Data in Keras\n",
-    "This project uses a dataset of 25,000 IMDB reviews. Each review, comes with a label. A label of 0 is given to a negative review, and a label of 1 is given to a positive review. The goal of this project is to create a model that will predict the sentiment of a review, based on the words in it. You can see more information about this dataset on the Keras (https://keras.io/datasets/) website."
+    "This project uses a dataset of 25,000 IMDB reviews. Each review comes with a label- a label of 0 is given to a negative review, and a label of 1 is given to a positive review. The goal of this project is to create a model that will predict the sentiment of a review, based on the words in it. You can see more information about this dataset on the Keras (https://keras.io/datasets/) website."
    ]
   },
   {
