--- a/Using Pytorch on  Fashion-MNIST data.ipynb
+++ b/Using Pytorch on  Fashion-MNIST data.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In this project we'll be using the [Fashion-MNIST dataset](https://github.com/zalandoresearch/fashion-mnist), a drop-in replacement for the MNIST dataset. MNIST is actually quite trivial with neural networks where you can easily achieve better than 97% accuracy. Fashion-MNIST is a set of 28x28 greyscale images of clothes. It's more complex than MNIST, so it's a better representation of the actual performance of your network, and a better representation of datasets you'll use in the real world.\n",
     "\n",
-    "<img src='fashion-mnist-sprite.png' width=500px>\n",
+    "<img src='Deep-learning/fashion-mnist-sprite.png' width=500px>\n",
     "\n",
     "First off, let's load the dataset through torchvision."
    ]
